--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^4.11.3",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
+    "node-schedule": "^1.2.5",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   },
