--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "multer": "^1.3.0",
     "node-schedule": "^1.2.5",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "superagent": "^3.6.0"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
